# LiDAR-viz

./: .gitignore  README.md  context.md  create_venv.sh  pyproject.toml
notebooks/: LiDAR_viz.ipynb
params/: No4-friction-8mm.yaml  base.yaml
params_sample/: No4-friction-8mm.yaml  No7-friction-8mm.yaml  base.yaml
src/lidar/: __init__.py  config.py  geometry.py  io_ply.py  leveling.py  output_manager.py  pipeline.py  plotting.py  preprocess_lidar.py  profile.py  resample.py  run.py
